--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && xcopy /E /Y .\\build\\* .\\dist\\",
     "start": "node dist/index.js",
     "dev": "nodemon index.ts"
   },
