--- a/frontend/client/tsconfig.json
+++ b/frontend/client/tsconfig.json
@@ -17,10 +17,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
     "jsx": "react-jsx"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src/**/*.ts"], // Lähdekoodin hakemistot
+  "exclude": ["node_modules"]
 }
