--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,8 +3,8 @@ Django==4.2.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 gunicorn==21.2.0
-mysqlclient==2.2.0
+mysqlclient==2.1.1
 PyJWT==2.8.0
 python-dotenv==1.0.0
-pytz==2023.3
+pytz==2023.3.post1
 sqlparse==0.4.4
