--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.7.2
 Django==4.2.5
+django-cors-headers==4.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 gunicorn==21.2.0
 mysqlclient==2.1.1
+packaging==23.1
+protobuf==4.21.12
 PyJWT==2.8.0
 python-dotenv==1.0.0
 pytz==2023.3.post1
 sqlparse==0.4.4
-django-cors-headers==4.2.0
+tzdata==2023.3
