--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.40",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-redux": "^7.1.25",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
     "http-proxy-middleware": "^2.0.6",
@@ -57,6 +52,12 @@
     "@types/react-helmet": "^6.1.6",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.40",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-redux": "^7.1.25"
+
   }
 }
