--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,5 +21,5 @@
     "jsx": "react-jsx"
   },
   "include": ["src/**/*.ts"], // Lähdekoodin hakemistot
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", ".env"]
 }
